--- a/src/Component/Tr.css
+++ b/src/Component/Tr.css
@@ -1,39 +1,40 @@
-.section{
-    margin-top: 120px;
+.section {
+  margin-top: 120px;
 }
-.section h3{
-    padding: 80px 120px;
-    color:#ec3838;
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 700;
-    /* margin: 120px 0px; */
+.section h3 {
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
+  padding: 80px 120px;
+  color: #ec3838;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 800;
+  /* margin: 120px 0px; */
 }
-.part{
-    display: flex;
-    justify-content: space-between;
-    margin-top: -70px ;
-    padding: 12px 120px;
+.part {
+  display: flex;
+  justify-content: space-between;
+  margin-top: -70px;
+  padding: 12px 120px;
 }
-.n1{
-    color: black;
-    font-size: 40px;
+.n1 {
+  color: black;
+  font-size: 40px;
 }
-.btn1{
-    font-size: 14px;
-    font-weight: 600;
-    height: 50px;
-    line-height: 50px;
-    padding: 0px 30px;
-    border-radius: 25px;
-    background-color: #ee626b;
-    text-transform: uppercase;
-    color: white;
-    border: none;
+.btn1 {
+  font-size: 14px;
+  font-weight: 600;
+  height: 50px;
+  line-height: 50px;
+  padding: 0px 30px;
+  border-radius: 25px;
+  background-color: #ee626b;
+  text-transform: uppercase;
+  color: white;
+  border: none;
 }
-.btn1:hover{
-    background-color: blue;
-    /* margin: 0px 30px; */
+.btn1:hover {
+  background-color: blue;
+  /* margin: 0px 30px; */
 }
 .main_cards:hover {
   & .name_games h5 {
@@ -44,81 +45,86 @@
     background-color: #007bff;
   }
 }
-.tr_cards{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 15px 30px;
-    padding: 0px 40px;
+.tr_cards {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 15px 30px;
+  padding: 0px 40px;
 }
-.main_cards{
-    background-color: #eeeeee;
-    border-radius: 25px;
-    position: relative;
-    height: 270px;
-    /* padding: 0px 20px; */
-    /* width: 100%; */
+.main_cards {
+  background-color: #eeeeee;
+  border-radius: 25px;
+  position: relative;
+  height: 270px;
+  /* padding: 0px 20px; */
+  /* width: 100%; */
 }
-.img_card img{
-    width: 250px;
-    height: 190px;
-    border-radius: 25px;
+.img_card img {
+  width: 250px;
+  height: 190px;
+  border-radius: 25px;
 }
-.price{
-    position: absolute;
-    top: 10px;
-    right: 17px;
-    background-color: #008af8;
+.price {
+  position: absolute;
+  top: 10px;
+  right: 17px;
+  background-color: #008af8;
   color: white;
   border-radius: 12px;
   display: inline-flex;
   flex-direction: column;
   align-items: center;
   width: 60px;
+  /* font-weight: 900; */
 }
-.real{
-    color: white;
-    font-weight: 500;
-    font-size: 19px;
-    /* align-items: center; */
-    /* justify-content: center; */
+.real {
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
+  /* align-items: center; */
+  /* justify-content: center; */
 }
-.fake{
-    color: white;
-    font-weight: 500;
-    font-size: 19px;
-    text-decoration: line-through;
-    /* align-items: center; */
-    /* justify-content: center; */
+.fake {
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+  text-decoration: line-through;
+  /* align-items: center; */
+  /* justify-content: center; */
 }
-.left_side{
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 20px;
+.left_side {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 20px;
 }
-.name_games h6{
-    color: black;
-    font-size: 15px;
-    font-weight: 500;
-    margin: 10px 0px;
- }
-.name_games h5{
-    color: black;
-    font-size: 17px;
-    font-weight: 700;
+.name_games h6 {
+  color: black;
+  font-size: 15px;
+  font-weight: 700;
+  margin: 10px 0px;
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
 }
-.bag{
-    background-color: #ee626b;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    margin: 25px 0px;
+.name_games h5 {
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
 }
-.bags{
-    color: white;
-    font-size: 20px;
+.bag {
+  background-color: #ee626b;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin: 25px 0px;
+}
+.bags {
+  color: white;
+  font-size: 20px;
 }
