--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -14,6 +14,7 @@
     text-transform: uppercase;
     color: white;
     margin: 120px 0px;
+    font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
     font-weight: 520;
     font-size: 20px;
     padding: 0px 120px;
@@ -22,6 +23,7 @@
   }
 }
 .p1{
+  /* font-family: "Poppins", "Helvetica Neue", Arial, sans-serif; */
   padding: 0px 120px;
   color: #ffffff; /* White text */
   font-size: 48px; /* Large font size */
@@ -40,13 +42,13 @@
   font-weight: 500;
   font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
 }
-.button {
+.home-btn {
   margin-top: -60px;
   padding: 0px 120px;
   /* max-width: 400px; */
   /* position: absolute; */
 }
-input {
+.input-home{
   max-width: 450px;
   width: 100%;
   height: 50px;
@@ -60,6 +62,7 @@ input {
   position: absolute;
 }
 .btn {
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
   position: relative;
   left: 300px;
   /* width: 30%; */
@@ -90,7 +93,7 @@ input {
   top: 20px;
   right: 17px;
   /* bottom: -10px; */
-  background-color: #384cd2;
+  background-color: #007bff;
   border-radius: 18px;
   padding: 8px;
   height: 40px;
@@ -101,15 +104,19 @@ input {
   justify-content: center;
   font-size: 20px;
   font-weight: 800;
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
 }
 .dis {
   position: absolute;
   bottom: -20px;
   left: -40px;
   background: #ee626b;
-  padding: 25px;
+  padding: 32px 0px;
+  width: 100px;
+  height: 100px;
+  text-align: center;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
   border-radius: 50%;
 }
@@ -149,9 +156,10 @@ input {
   background-color: #ee626b;
 }
 .msg {
-  font-size: 16px;
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
+  font-size: 1px;
   text-transform: uppercase;
   color: black;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 1;
 }
